UF-11161: Adjustments after review feedback and corrections to API and other minor fixes